# KeplerAbyss

./: README.md  fonts  pyproject.toml
.github/workflows/: ci.yml  release.yml
examples/: __init__.py  cpu_demo.py  generate_positions.py  input  run_text_candidates.py  run_text_layout.py  sim_data.json  text_layout_positions.json  text_layout_sim_data.json  visualize_force_field.py  visualizer.html
output/demo_text/: summary.json
output/text_01/: candidates.json
src/orbital_layout/: __init__.py  anchors.py  api.py  core.py  text_rendering.py
tests/: test_basic.py  test_text_candidate_api.py
